--- a/RDIP/Codes/experiment.html
+++ b/RDIP/Codes/experiment.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+      <meta charset="UTF-8">
         <title>Virtual Labs</title>
         <script src="script.js"></script>
 
@@ -14,6 +15,7 @@
         </select>
         <br><br>
         <p style="color:#0000AA;font-size:16px;" id="ex"></p>
+ <div id="buttons"></div>
 </center>
     </body>
-</html> 
+</html>  
