--- a/RDIP/Codes/experiment.html
+++ b/RDIP/Codes/experiment.html
@@ -5,7 +5,7 @@
         <script src="script.js"></script>
 
     </head>
-    <body>
+    <body><center>
 <h1>Experiment:</h1>
         <center><h2>Forming Sentences-2</h2>
        <select id="lang" onchange="formed()">
@@ -16,5 +16,6 @@
         <p id="lang"></p>
         <div id="engl"></div>
         <div id="hind"></div>
+</center>
     </body>
 </html>
