--- a/RDIP/Codes/experiment.html
+++ b/RDIP/Codes/experiment.html
@@ -3,6 +3,9 @@
       <meta charset="UTF-8">
         <title>Virtual Labs</title>
         <script src="script.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
     </head>
     <body><center>
