--- a/RDIP/Codes/exp2.html
+++ b/RDIP/Codes/exp2.html
@@ -2,17 +2,18 @@
     <head>
       <meta charset="UTF-8">
         <title>Virtual Labs</title>
-       
+         <script src="scriptjs.js"></script>
     </head>
     <body>
 <h1>Experiment:</h1>
         <center><h2>Tokens and Types</h2>
-       <select>
+       <select id="corpus" onchange="text()">
             <option value="">---Select a corpus---</option>
             <option value="corpus1">Corpus 1</option>
             <option value="corpus2">Corpus 2</option>
             <option value="corpus3">Corpus 3</option>
-        </select>   
+        </select>   <br>
+       <p style="color:#0000AA;font-size:16px;" id="ex2"></p>
         </center>
     </body>
 </html>
